tdf#155542: Fix crashtesting assert

When cloning an RTL glyph range, we might end up cutting in the middle
of a cluster e.g. between a base character and a combining mark since
both with have the same charPos() after:

commit 09c076c3f29c28497f162d3a5b7baab040725d56
Author: Khaled Hosny <khaled@aliftype.com>
Date:   Wed Oct 5 21:00:46 2022 +0200

    tdf#151350: Fix extraneous gaps before marks

(which changed how HarfBuzz sets up clusters back to the default where
marks form clusters with their bases, before that a mark formed its own
cluster).

This leads to the cloned glyph range to include the glyph for the
combining marks, while it is not included in the text string.

Change-Id: I83031e0e0ffc7c5932101649a9cc2bf953a6347d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152321
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>